--- a/src/App.css
+++ b/src/App.css
@@ -1,100 +1,23 @@
 
 
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  /* max-width: 1280px; */
+  /* margin: 0 auto; */
+  /* padding: 2rem; */
   text-align: center;
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+  /* height: 6em; */
+  /* padding: 1.5em; */
+  /* will-change: filter; */
+  /* transition: filter 300ms; */
 }
+
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+  filter: drop-shadow(0 0 2em #e8bfc9aa);
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
- nav{
-  display:flex;
-  align-items: center;
-  justify-content: space-between;
-  background: black;  
-  padding: 20px 200px;
-  box-shadow: 0 5px 15px rgba(0,0,0, 0.06);
-} 
-
-
-
-nav{
-    display:flex;
-    align-items: center;
-    justify-content: space-between;
-    background: black;  
-    padding: 20px 80px;
-    box-shadow: 0 5px 15px rgba(0,0,0, 0.06);
-}
-
-#navbar {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-#navbar li{
-    list-style: none;
-    padding: 0 20px;
-    position:relative;
-}
-
-#navbar li a {
-    text-decoration: none;
-    font-size: 1.3rem ;
-    font-weight: 600;
-    color: white;
-    transition: 0.3s ease-in-out;
-}
-
-#navbar li a:hover,
-#navbar li a.active {
-    color: aquamarine;
-}
-
-#navbar li a:hover::after,
-#navbar li a.active::after{
-    content: "";
-    width: 30%;
-    height:2px;
-    background-color: aquamarine;
-    position: absolute;
-    bottom: -4px;
-    left: 20px;
-}
