--- a/src/App.css
+++ b/src/App.css
@@ -4,20 +4,10 @@
   /* max-width: 1280px; */
   /* margin: 0 auto; */
   /* padding: 2rem; */
+  /* makes everything centered */
   text-align: center;
+  
 }
 
-.logo {
-  /* height: 6em; */
-  /* padding: 1.5em; */
-  /* will-change: filter; */
-  /* transition: filter 300ms; */
-}
 
-.logo:hover {
-  filter: drop-shadow(0 0 2em #e8bfc9aa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
 
