--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   /* margin: 0 auto; */
   /* padding: 2rem; */
   /* makes everything centered */
-  /* text-align: center; */
+  text-align: center;
   
 }
 
