added styling to pages

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,12 @@
   /* padding: 2rem; */
   /* makes everything centered */
   text-align: center;
+  background-color: rgb(211, 211, 235);
+  /* background-color: rgb(1, 6, 15); */
+  /* background-color: rgb(150, 172, 213); */
+  /* background-color: rgb(102, 112, 132); */
+
+
   
 }
 
