--- a/src/styles/Dua.css
+++ b/src/styles/Dua.css
@@ -1,17 +1,63 @@
-.dua-container{
+.container{
     /* display: flex; */
     /* flex-direction:row; */
     /* flex-direction: column-reverse; */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around; 
+    padding: 40px;
 }
 
 .card{
-        display: table;
-        flex-direction:row;
-        border: 2px solid white;
+    display: table;
+    flex-direction:row;
+    border: 2px solid rgb(87, 15, 255);
+    background-color: #060119;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
 }
 
-.card-body{
+.card-content{
     /* float:left; */
     /* width: 25%; */
-  padding: 0 10px;
+    /* padding: 50px; */
+    height: 200px;
+    width: 300px;
+    overflow: hidden;
+    padding: 20px;
+
+}
+
+.card-content, h5, h3{
+    margin-top: 10;
+    overflow: hidden;
+  /* padding-bottom: 90px; */
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+  
+
+.card-row{
+    /* display:flex; */
+    /* flex-direction:flex; */
+    /* float: center; */
+    /* justify-content: flex */
+    padding: 20px;
+}
+
+.card-dua{
+    /* display: table; */
+    /* table-layout: fixed; */
+    /* flex-direction:row; */
+    border: 2px solid rgb(87, 15, 255);
+    background-color: #060119;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* overflow: hidden; */
+}
+
+.card-dua{
+    text-align: center;
+    padding-bottom:10px;
 }
