added styling to morning athkar page

--- a/src/styles/Dua.css
+++ b/src/styles/Dua.css
@@ -16,6 +16,8 @@
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
+    margin-bottom: 20px;
+
 }
 
 .card-content{
@@ -60,4 +62,10 @@
 .card-dua{
     text-align: center;
     padding-bottom:10px;
+    margin-bottom: 30px;
+
+}
+
+.card-dua, p{
+    text-align: center;
 }
