--- a/src/styles/Gems.css
+++ b/src/styles/Gems.css
@@ -1,26 +1,52 @@
 .root{
-    background-color: rgb(3, 3, 33);
     max-width: none;
     min-width: none;
     padding-left: 200px;
-    padding-right:200px
+    padding-right:200px;
+    background-color:rgb(3, 3, 33);
+    
 }
 
 .gem-form{
-    text-align: center;
+    /* text-align: center; */
 }
 
 .username-password-input{
-    border: solid 2px green;
+    /* display: table; */
+    /* flex-direction:row; */
+    /* padding-inline-end: 20px; */
+    /* padding-inline-start: 20px; */
+    /* padding-block: 20px; */
+    /* display:flex; */
+    /* align-content: center; */
+    /* text-align: center; */
+    /* justify-content: space-between; */
+    /* padding-left: 250px; */
+    border: 2px solid rgb(87, 15, 255);
+    background-color: #060119;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* overflow: hidden; */
+    /* margin-bottom: 20px; */
 }
+
 
 .topic-gem-input {
-    border:2px solid rgb(148, 223, 135);
+    /* display: table; */
+    /* flex-direction:row; */
+    border: 2px solid rgb(87, 15, 255);
+    background-color: #060119;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    margin-bottom: 20px;
 }
 
-.topic-gem-input, p{
+.topic-gem-input, p {
+    font-size: 15pt;
     text-align: center;
     margin-bottom: 5px;
+    /* margin: auto; */
 }
 
 #gem-input-comment{
@@ -28,35 +54,61 @@
     height: 40pt;
     margin: 20px
     /* style for text to stay within borders */
+    
 }
-.create-gem{
-    border:2px solid pink;
-    padding-bottom:20px;
+.create-gem input:hover {
+    /* border: 2px solid rgb(87, 15, 255);
+    background-color: #060119;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden; */
+      color: aquamarine;
 }
 
 #create-gem-button{
-    margin-bottom: 20px;
+    border: 2px solid rgb(87, 15, 255);
+    background-color: #092021;
+    font-weight: 800;
+    border-radius:10px;
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
+    /* overflow: hidden; */
 }
 
+
+
 .gem-render{
-    border: 2px solid white;
+    border: 2px solid rgb(87, 15, 255);
+    border-radius:10px;
     margin-top: 20px;
-    margin-bottom: 50px;
     margin-left: 100px;
     margin-right: 100px;
-    padding: 20px;
+    /* padding: 10px; */
     /* max-width: 400px; */
     /* display:flex; */
+    /* background-color: rgb(3, 3, 33); */
+    background-color: rgb(143, 162, 203);
+
 }
 
 .gem-container-content{
-    border: 2px solid orange;
-    padding-right:5px;
-    padding-left:5px;
+    padding-right:2px;
+    padding-left:2px;
 }
 
+/* USERNAME */
 .gem-render-username-password-div{
-    border: 2px solid purple;
+    /* border: 2px solid  rgb(87, 15, 255); */
+    border-radius:2px;
+    /* background-color: rgb(3, 3, 33); */
+    /* background-color: whitesmoke; */
+    /* border-radius:100px; */
+    color: whitesmoke;
+    font-family:monospace;
+    font-size: 13pt;
+    font-weight:900;
+    text-transform: lowercase;
+    letter-spacing: 1px;
+    /* word-spacing: 2px; */
     /* background-color: rgb(125, 11, 11); */
 
 }
@@ -66,10 +118,36 @@
     padding-left:20px;
 }
 
+.gem-render-username-password-div, h3{
+    text-align: center;
+    padding-left:20px;
+    color:rgb(87, 15, 255);
+    font-weight: bolder;
+
+}
+
+.gem-render-username-password-div, p{
+    text-align: left;
+    padding-left:20px;
+}
 .gem-render-topic-gem-div{
     border: 2px solid blue;
+    background-color: rgb(3, 3, 33);
+    border-radius:15px;
+    color:whitesmoke;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: bolder;
+    letter-spacing: 0.5px;
+    word-spacing: 2px;
 }
 
 .gem-render-delete-div{
-    border: solid 2px yellow;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.boxes{
+    /* padding-block:20px; */
+    display: flex;
+    justify-content: space-around;
 }
