--- a/src/styles/Dua.css
+++ b/src/styles/Dua.css
@@ -56,6 +56,8 @@
     background-color: #060119;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+    padding-top: 30px;
     /* overflow: hidden; */
 }
 
