--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,5 +1,49 @@
 .footer{
     background-color: rgb(0, 0, 0);
-    padding-top: 40px;
-    padding-bottom: 100px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    /* padding-right: 20px; */
+    padding-right: 150px;
+    padding-left: 650px;
+    display: flex;
+    /* flex-direction: row; */
+    justify-content: space-between;
+}
+
+.logo:hover {
+    filter: drop-shadow(0 0 2em #ff0ccaaa);
+    /* align-items: center; */
+  }
+
+#footer li{
+    list-style:none;
+    padding: 2px;
+    position:relative;
+    display:inline-block;
+    padding: 0px 20px;
+}
+
+#footer li a {
+    text-decoration: none;
+    font-size: 0.8rem ;
+    font-weight: 300;
+    color: white;
+    transition: 0.4s ease-in-out;
+}
+
+
+#footer li a:hover,
+#footer li a.active {
+    color: aquamarine;
+}
+
+#footer li a:hover::after,
+#footer li a.active::after{
+    content: " ";
+    width: 50%;
+    height:2px;
+    background-color: aquamarine;
+    position: absolute;
+    bottom: -4px;
+    left: 20px;
 }
