--- a/src/styles/Gems.css
+++ b/src/styles/Gems.css
@@ -53,22 +53,28 @@
     
 }
 
+/* GEM INPUT */
 #gem-input-comment{
     width: 100%;
     height: 100px;
-    /* margin: 20px; */
-    box-sizing: border-box;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+    margin: auto;
+    /* box-sizing: border-box; */
+    /* overflow: hidden; */
+    white-space: wrap;
+    /* text-overflow: ellipsis; */
+    font-size: 15px;
+    padding-bottom: 15px ;
+    
 }
 .create-gem input:hover {
-    /* border: 2px solid rgb(87, 15, 255);
+    border: 2px solid rgb(87, 15, 255);
     background-color: #060119;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    overflow: hidden; */
-      color: aquamarine;
+    overflow: hidden;
+    color: aquamarine;
+    box-sizing: border-box;
+
 }
 
 #create-gem-button{
@@ -156,4 +162,18 @@
     /* padding-block:20px; */
     display: flex;
     justify-content: space-around;
+}
+
+.card-content-dua, p{
+    margin: auto;
+    text-align: center;
+    font-weight: bold;
+    word-spacing: 3px;
+    color: whitesmoke;
+   
+}
+
+.card-content-dua, h2{
+    color: rgb(37, 137, 225);
+   
 }
