--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 
 #root {
-  max-width:max-content;
+  /* max-width:max-content; */
   /* margin: 0 auto; */
   /* makes everything centered */
   text-align: center;
