updated styling backgrounds and home page

--- a/src/styles/Gems.css
+++ b/src/styles/Gems.css
@@ -4,6 +4,9 @@
     padding-left: 200px;
     padding-right:200px;
     background-color:rgb(3, 3, 33);
+
+    /* background: linear-gradient( #8276b6, #afc8d7); */
+
     
 }
 
@@ -23,7 +26,9 @@
     /* justify-content: space-between; */
     /* padding-left: 250px; */
     border: 2px solid rgb(87, 15, 255);
-    background-color: #060119;
+    /* background-color: #060119; */
+    background: linear-gradient( #8276b6, #afc8d7);
+
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     /* overflow: hidden; */
@@ -35,8 +40,9 @@
     /* display: table; */
     /* flex-direction:row; */
     border: 2px solid rgb(87, 15, 255);
-    background-color: #060119;
-    border-radius: 10px;
+    /* background-color: #060119; */
+    background: linear-gradient( #8276b6, #afc8d7);
+    border-radius: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     /* margin-bottom: 100px; */
@@ -46,7 +52,7 @@
     font-size: 15pt;
     text-align: center;
     margin-bottom: 5px;
-    /* margin: auto; */
+    margin: auto;
 }
 
 .topic-gem-input, textarea{
@@ -57,10 +63,11 @@
 #gem-input-comment{
     width: 100%;
     height: 100px;
-    margin: auto;
+    /* margin: auto; */
     /* box-sizing: border-box; */
-    /* overflow: hidden; */
+    overflow: hidden;
     white-space: wrap;
+    border-radius: 2px;
     /* text-overflow: ellipsis; */
     font-size: 15px;
     padding-bottom: 15px ;
@@ -98,7 +105,9 @@
     /* max-width: 400px; */
     /* display:flex; */
     /* background-color: rgb(3, 3, 33); */
-    background-color: rgb(143, 162, 203);
+    /* background-color: rgb(143, 162, 203); */
+    background: linear-gradient( #8276b6, #afc8d7);
+
 
 }
 
