--- a/src/styles/Gems.css
+++ b/src/styles/Gems.css
@@ -82,9 +82,12 @@
     /* background-color: #092021; */
     /* background-color: #3e7f81;
     border: 2px solid #3e7f81; */
-    border: 2px solid #011f20;;
+    /* border: 2px solid #011f20;;
     background-color: #011f20;
-    color: whitesmoke
+    color: whitesmoke; */
+    background-color: #2e465f;
+    border: 2px solid #2e465f;
+    color: whitesmoke(3, 3, 33) ;
 
     /* box-sizing: border-box; */
 }
@@ -92,12 +95,16 @@
 #create-gem-button{
     /* border: 2px solid #011f20;
     background-color: #011f20; */
-    background-color: lightblue;
+    border: 2px solid #060119;;
+    background-color: #060119;
+    color: whitesmoke;
+    /* background-color: lightblue;
     border: 2px solid lightblue;
+    color: rgb(3, 3, 33) ; */
     /* background-color: #092021; */
     font-weight: bolder;
     border-radius:10px;
-    color: rgb(3, 3, 33) ;
+    
     width: 200px;
     height: 40px;
     /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
@@ -105,11 +112,11 @@
 }
 
 
-
+/* Gem Render container */
 .gem-render{
     /* border: 2px solid rgb(87, 15, 255); */
     border-radius:10px;
-    margin-top: 5px;
+    margin-top: 10px;
     margin-left: 100px;
     margin-right: 100px;
     /* padding: 10px; */
@@ -119,7 +126,7 @@
     /* background-color: rgb(143, 162, 203); */
     /* background: linear-gradient( #8276b6, #afc8d7); */
     /* background: linear-gradient( #afc8d7, #8276b6); */
-    background-color: rgb(3, 3, 33);
+    background-color: #2e465f;
 
 }
 
@@ -152,11 +159,12 @@
     /* padding-left:20px; */
 }
 
+
 .gem-render-username-password-div, h3{
     text-align: center;
     padding-left:20px;
     padding-top: 10px;
-    color: rgb(3, 3, 33);
+    color: rgb(179, 179, 206);
     font-weight: bolder;
 
 }
@@ -165,9 +173,11 @@
     text-align: left;
     padding-left:20px;
 }
+
+/* paragraph background for gem */
 .gem-render-topic-gem-div{
-    /* border: 2px solid blue; */
-    background-color: whitesmoke;
+    border: 2px solid whitesmoke;
+    background-color: #060119;
     /* background-color: "whitesmoke"; */
     /* border-radius:10px; */
     /* color:rgb(171, 11, 11); */
@@ -191,7 +201,7 @@
     margin: auto;
     text-align: center;
     word-spacing: 4px;
-    color: rgb(11, 48, 80);
+    color: rgb(179, 179, 206);
     font-size:11pt;
     padding-bottom: 10px;
 }
