--- a/src/styles/Gems.css
+++ b/src/styles/Gems.css
@@ -210,3 +210,23 @@
     color: rgb(37, 137, 225);
    
 }
+
+.send-button:hover{
+    background-color: #2e465f;
+    border: 2px solid #2e465f;
+    color: whitesmoke(3, 3, 33) ;
+    width: 80px;
+    border-radius:5px;
+    transition-duration: 0.2s;
+
+}
+
+.send-button{
+    border: 2px solid #060119;;
+    background-color: #060119;
+    color: whitesmoke;
+    width: 60px;
+    border-radius:5px;
+
+
+}
